refactor: minimalist academic form design and ZIP-only uploads
- Removed all emojis from intake form
- Changed to Times New Roman serif font
- Muted grayscale color scheme
- Square corners, no shadows or hover effects
- Uppercase section headers with letter spacing
- ZIP-only file uploads with automatic extraction
- Server extracts ZIP contents to named subfolders

--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,5 @@ dist/
 *.log
 logs/
 
-# Keep .github for workflows and dependabot
-!.github/
+# Ignore specific files
+.github/copilot-instructions.md
